# librechat-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
librechat_mcp/: client.py  server.py
tests/: test_server.py
